lib/src/scanner/snapshots/gql_safeguard_lib__scanner__extractor__tests__edge_case_fixtures.snap
---
source: lib/src/scanner/extractor.rs
expression: result
---
File: fixtures/edge_cases/additional-queries.ts
GraphQL strings found: 2

=== GraphQL String 1 ===
Line: 1
Content:

  query AdditionalQuery($id: ID!) {
    user(id: $id) {
      id
      importedField @throwOnFieldError  # Some Comment
    }
  }


=== GraphQL String 2 ===
Line: 1
Content:

  query GraphQLQuery($id: ID!) @catch {
    user(id: $id) {
      id
      protectedField @throwOnFieldError
    }
  }


---

File: fixtures/edge_cases/circular_fragments.ts
GraphQL strings found: 3

=== GraphQL String 1 ===
Line: 1
Content:

  fragment FragmentA on User {
    id
    name
    ...FragmentB
  }


=== GraphQL String 2 ===
Line: 1
Content:

  fragment FragmentB on User {
    email
    bio
    ...FragmentA  # Circular reference
  }


=== GraphQL String 3 ===
Line: 1
Content:

  query CircularQuery($id: ID!) {
    user(id: $id) {
      ...FragmentA
    }
  }


---

File: fixtures/edge_cases/commented_graphql.ts
GraphQL strings found: 1

=== GraphQL String 1 ===
Line: 1
Content:

  query ValidQuery($id: ID!) @catch {
    user(id: $id) {
      id
      name
      # This field comment should not affect parsing
      avatar @throwOnFieldError  # Protected by query-level @catch
    }
  }


---

File: fixtures/edge_cases/dynamic_imports.tsx
GraphQL strings found: 2

=== GraphQL String 1 ===
Line: 1
Content:

  query BaseQuery($id: ID!) @catch {
    user(id: $id) {
      id
      name
      dynamicField @throwOnFieldError
    }
  }


=== GraphQL String 2 ===
Line: 1
Content:

    query StaticDynamicQuery($id: ID!) {
      user(id: $id) {
        id
        dynamicField @throwOnFieldError  # This should be flagged as unprotected
      }
    }
