lib/src/scanner/snapshots/gql_safeguard_lib__scanner__extractor__tests__single_file_extraction.snap
---
source: lib/src/scanner/extractor.rs
expression: formatted
---
File: fixtures/valid/fragment_level_catch.ts
GraphQL strings found: 2

=== GraphQL String 1 ===
Line: 1
Content:

  fragment RiskyUserData on User @catch {
    sensitiveInfo @throwOnFieldError
    backupEmail @throwOnFieldError
    internalId
  }


=== GraphQL String 2 ===
Line: 1
Content:

  query GetUserWithRiskyData($id: ID!) {
    user(id: $id) {
      id
      name
      ...RiskyUserData
    }
  }
